<resources>
    <string name="app_name">ISK</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">ISK</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="facebook_app_id">1516560371968649</string>

    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>


    <!-- Strings related to Navigation -->

    <string name="user_log">User Log</string>
    <string name="add_users">Add User </string>
    <string name="pin_massage">Pin Massage </string>
    <string name="setting">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="Shar_App">Share Application</string>
    <string name="battery">Battery</string>
    <string name="home">Home</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="fab_fragment_title">FAB</string>



    <string name="Complete">Door Opened</string>
    <string name="Upload">Open Door </string>
    <string name="Error"> Erro</string>
    <string name="frist_name" >Frist Name </string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="addlock">Add Lock</string>

</resources>
