<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.amrsaid.isksecurity.Fragments.Home"
    android:gravity="center"
    android:orientation="vertical"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Available User( 6 ) "
        android:id="@+id/textView3"
        android:layout_above="@+id/btnWithText"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/btnWithText" />

    <com.dd.CircularProgressButton
        android:textAllCaps="false"
        android:id="@+id/btnWithText"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cpb_textComplete="@string/Complete"
        app:cpb_textError="@string/Error"
        app:cpb_textIdle="@string/Upload"
        app:cpb_cornerRadius="300dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Last log from( 2 )hours"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
